<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/format"
            android:text="@string/user"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label2"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="2dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Spinner
            android:id="@+id/spinner"
            style="@style/spinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/button"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/menu4"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:gravity="right"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/activity_vertical_margin"
        android:visibility="visible" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label3"
        android:visibility="visible" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:tag="Жопа"
        android:visibility="visible">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>

