<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/confirm_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="16dp"
            android:minWidth="16dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>
